# experiments

./: .gitignore  README.md
7x8/: mistral7b.py
ane_fp16/: test.py
apple-smi/: cpu_monitor.swift  gpu_monitor.swift
banana/: double_lookup.py
bencode/: bencode-minimax-m2.5-Q4_K_M.cpp  test.sh
bioproxy/: .gitignore  CLAUDE.md  Makefile  README.md  config.json  context.txt  go.mod  main.go  mini.txt
boxplot/: boxplot.py
bswap/: Makefile  bm_bswaps.cpp  bswaps.h  test_bswaps.cpp
bucketize/: bucket.cpp
calc/: README.md  calc_test.py  model.py  prepare.py  run_all.sh  run_all_osx.sh  train.py  train_addition.py
calc/data/: prepare.py
dlm/: CMakeLists.txt  back.cpp  chat.py  client.py  config.h  dlm.cpp  lead.cpp  query_context.h  serv.cpp  service.cpp  sidecar.cpp  speculator.cpp  todo.txt  utils.h
explain/: explain.sh
fewlines_samples/: dash.py  test.py
ff_ane/: ff_ane.py
gguf-inspect/: BUILD.md  CMakeLists.txt  moe-eval-size.cpp
hbr/: braille_chart.py  metrics_monitor.swift  metrics_monitor_braille.swift
hmp/: .gitignore  CMakeLists.txt
hmp/src/: main.cpp
http_latency/: client.py  service.py
llama_duo/: README.md  back.cpp  chat.py  lead.cpp
llamatool/: call.py
llindex/: .llidx.cer.conf  .llidx.conf  .llidx.mistral.conf
llindex/llindex/: chunk_ctx.py  chunks.py  config.py  context.py  crawler.py  dir_process.py  file_info.py  groq.py  index_mini.py  index_stats.py  indexer.py  indexer.yaml  llm_client.py  local_llm.py  mistral.py  requirements.txt  token_counters.py  utils.py
llindex/llindex/clients/: groq.py  local.py
llindex/llindex/tests/: test_chunk_files.py  test_file_info.py  test_groq_client.py  test_token_counters.py
llindex/lltools/: demo_mistral.py  demo_sonnet.py  get_files.py  git_grep.py  git_log.py  git_show.py  index_expand.py  lltools.py  tools.py
llindex/lucas/: demo.py  demo_mistral.py  demo_sonnet.py  indexer.py  llm_client.py  lucas_service.py  rate_limiter.py  utils.py  yolo.py
llindex/lucas/clients/: cerebras.py  cerebras_v0.py  claude.py  groq.py  mistral.py
llindex/src/: dir_process.py  file_info.py  token_counters.py
llindex/src/tests/: test_file_info.py  test_token_counters.py
llm_beam_width/: .gitignore  CMakeLists.txt  batch.cpp  batch_size.txt  beam.cpp  beam_width.cpp  gen_main.cpp  prefix.txt  ranks.cpp  shared.h
llm_beam_width/data/: prompt.txt  q0.txt  q1.txt  q2.txt  q3.txt  q4.txt  q5.txt  q6.txt
llmproxy/: .gitignore  README.md  package-lock.json  package.json
llmproxy/public/: index.html
llmproxy/src/: index.js
lua/: fact.lua
m1_inference/: m1_inference.py
m1cores/: Makefile  m1cores.cpp  m1cores.r
mcps/: README.md
mcps/summarize/: README.md  pyproject.toml  summarize.py
minitop/iphone3g-monitor/: .gitignore  package-lock.json  package.json  server.js
minitop/iphone3g-monitor/public/: app.js  index.html
mlx_qwen/: prompt.txt  run.py  run_10k.py
mlx_qwen/mlx-bench/: mb2.py  mlx-bench.py
mstatus/: mstatus.py
notes/notes-app/: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
notes/notes-app/public/: index.html
notes/notes-app/src/: server.js
outline/: .gitignore  README.md  package.json
outline/examples/: sample.c  sample.js  sample.py
outline/src/: index.js  language-detector.js  language-loader.js  outline-generator.js
pdfq/: Makefile  README.md  pdfq.swift
pwrd/: lucas.conf  lucas.idx  parser.py  pwrd.sh
pwrd/data/: test_out.xml
pygen/: mpt.py  notes.md
pyipc/: pipe.py
q3c_bm/: explain.sh  intro0.sh  run.sh  run_for_hour.sh
qwen_img/: README.md  gen.py  gen_configurable.py  server.py
qwen_img/templates/: index.html  jobs.html
rtdigest/: .gitignore  Makefile  README.md
rtdigest/include/: rtdigest.h
rtdigest/tests/: precision_plot.r  reference_impl.r  rtdigest_compare.cpp  rtdigest_performance.cpp  rtdigest_precision.cpp  rtdigest_tests.cpp
rtdigest/tests/data/: medium.in
rtdigest/tests/t_digest/: pom.xml
selfeval/: run.py
split_model/: README.md  backprop_bm.py  backprop_service.py  backward_cmp.py  backwards_llama2.py  backwards_manually.py  backwards_phantom_llama2.py  benchmark_backprop.py  blackbox.py  blackbox_loader.py  blackbox_model.py  finetune.py  forward_cmp.py  greedy_gen.py  loader.py  manual_load.py  model.py  optimizing.md  phantom_loader.py  phantom_model.py  plain_loader.py  prefetched_module.py  split_model.py  test_backprop.py  test_gen.py  test_load_and_save.py  track_ram.py  utils.py
split_model/test_data/: alice.txt  cubestat.txt  logits.pt  sample_emb_after.pt  sample_emb_before.pt  sample_weights_after.pt  sample_weights_before.pt
topswops/: .gitignore  topswops.cpp
tsi/: ts.py
typo/: benchmark_runner.py  check_and_fix_line_endings.sh  data_candidates.txt  fix_all_line_endings.sh  prompt.txt  prompt_header.txt  run_claude_code.sh  run_llama_cpp.sh  run_mlx.sh  run_one.sh  verify.sh  verify_changes.sh  verify_diff.py
typo/argh/typos/: argh_0.h  argh_1.h  argh_10.h  argh_11.h  argh_2.h  argh_3.h  argh_4.h  argh_5.h  argh_7.h  argh_8.h  argh_9.h
typo/data/argh/: README.md
udp/: Makefile  NETWORK_SETUP.md  client_opt_linux.c  server_linux.c  udp_client.py  udp_client_opt.py  udp_server.py  udpclient.c  udpclient_aggr.c  udpclient_opt.c  udpserver.c  udpserver_aggr.c
uplt/: .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
uplt/.github/: dependabot.yml
uplt/.github/workflows/: ci.yml
uplt/data/: devstral_q8.csv  numeric_test.csv  test.csv
uplt/src/uplt/: __init__.py  charts.py  cli.py  core.py  query_builder.py
uplt/tests/: test_charts.py  test_core.py  test_query_builder.py
vega/: BENCHMARK_USAGE.md  README.md  bandwidth_benchmark.metal  bandwidth_benchmark.swift  build.sh  compute_benchmark.metal  compute_benchmark.swift  flops_benchmark.metal  flops_benchmark.swift  flops_benchmark_dual_final.swift  flops_benchmark_flexible.swift  flops_benchmark_heavy.metal  memory_bandwidth_benchmark.swift
vimai/: README.md  reader.vim  vqq.vim
vt/autoload/vt/: bar.vim
vt/plugin/: vt.vim
vt/test/: test_fmt.vim
(+8 files in other folders)
